# flowlynk-crm-dev

./: .gitignore  README.md  compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/common/admin/: rbac.py  tenant.py
apps/common/mixins/: models.py
apps/common/tenancy/: context.py  middleware.py  orm.py
apps/crm/catalog/: apps.py
apps/crm/clients/: apps.py
apps/crm/communications/: apps.py
apps/crm/leads/: apps.py
apps/crm/locations/: __init__.py  admin.py  apps.py  models.py  service.py
apps/crm/pricing/: __init__.py  apps.py
apps/reporting/: apps.py
samples/: roles.json
scripts/: bootstrap_structure.py
templates/: landing.html  login_email.html  org_picker.html  tenant_app_home.html  tenant_login.html
templates/admin/: base_site.html  grouped_app_list.html  index.html  nav_sidebar.html
tests/: test_admin_grouping.py  test_admin_rbac_enforcement.py  test_admin_tenant_hardening.py  test_admin_tenant_scoping_locations.py  test_boot.py  test_bootstrap_org_admin_command.py  test_locations_hierarchy_org_consistency.py  test_logout_redirect.py  test_membership_email_discovery.py  test_membership_roles_inline.py  test_platform_superuser_admin_mode.py  test_rbac_apply_role_templates_admin.py  test_rbac_authz.py  test_rbac_seed_and_import.py  test_tenancy_resolution.py  test_tenant_admin_add_user_creates_membership.py  test_tenant_login_redirect.py  test_tenant_orm.py
webcrm/: admin.py  asgi.py  forms.py  urls.py  views.py  wsgi.py
webcrm/settings/: base.py  dev.py  prod.py  test.py
(+40 files in other folders)
